--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "g": "^2.0.1",
+    "javascript-text-truncate": "^3.0.0",
     "mongoose": "^7.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
